# strcount

./: .gitignore  LICENSE  README.md  STRcount.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
STRcount/: STRcount_wrapper.py  __init__.py
src/: STRcount.py
src/STRcount/: STRcount.py  STRcount_wrapper.py  __init__.py  genome_str_graph_generator.py  make_strcount_config.py  parse_gaf.py
