[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STRcount"
version = "0.0.3"
authors = [
  { name="Sabiq Chaudhary", email="sabiq.work@gmail.com" },
]
description = "A package to count the number of repeats in a Short Tandem Repeat Expansion from long reads."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sabiqali/strcount"
"Bug Tracker" = "https://github.com/sabiqali/strcount/issues"