[metadata]
name = STRcount
version = 0.0.1
authors = [
  { name="Sabiq Chaudhary", email="sabiq.work@gmail.com" },
  { name="Jared Simpson", email="jsimpson@oicr.on.ca" }
]
description = A package to count the number of repeats in a Short Tandem Repeat Expansion from long reads.
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
url = https://github.com/sabiqali/strcount
project_urls =
    Bug Tracker = https://github.com/sabiqali/strcount/issues
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src