[metadata]
name = STRcount
version = 0.0.1
author = Sabiq Chaudhary
author_email = sabiq.work@gmail.com
description = A package to count the number of repeats in a Short Tandem Repeat Expansion from long reads.
long_description = file: README.md
long_description_content_type = text/markdown
license = { file="LICENSE" }
url = https://github.com/sabiqali/strcount
project_urls =
    Bug Tracker = https://github.com/sabiqali/strcount/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src